--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "react-typescript",
+  "name": "react-18-typescript",
   "version": "1.0.0",
-  "description": "React and TypeScript example starter project",
-  "keywords": [
-    "typescript",
-    "react",
-    "starter"
-  ],
+  "description": "react 18 + typescript simple starter",
+  "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-scripts": "4.0.0",
-    "jotai": "https://pkg.csb.dev/pmndrs/jotai/commit/2d0d4ad9/jotai",
-    "redux": "5.0.1",
-    "react-redux": "9.2.0",
-    "@reduxjs/toolkit": "2.5.0"
+    "@reduxjs/toolkit": "^2.5.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "bootstrap": "^5.3.3",
+    "fast-deep-equal": "^3.1.3",
+    "framer-motion": "^10.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
+    "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
+    "sass": "^1.85.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "typescript": "4.1.3"
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
